# AgileDisruption

./: CMakeLists.txt  CMakeLists.txt.user.2fdf146  LICENSE
backend/interface/: CMakeLists.txt  CMakeLists.txt.user.cc571a3
backend/interface/include/agiledisruption/: client.hpp  interface.hpp  server.hpp
backend/interface/include/agiledisruption/internal/: common.hpp
backend/interface/src/: fifo.UNIX.cxx  interface.cpp  network.UNIX.cxx
backend/interface/tests/: calculator_api.cpp  fifo_api.cpp  hello_world_api.cpp  store_fetch_api.cpp  tcpip_api.cpp
backend/skel/: CMakeLists.txt
